# py

./: Chemistry.py  CobbBrandonGraham_AI_211124.py  CobbBrandonGraham_Lucy_030824.py  CobbBrandonGraham_MyCog_030824.py  CobbBrandonGraham_OpenAI_150924.py  CobbBrandonGraham_VeganAI_070924.py  CobbBrandonGraham_VeganAI_080924.py  CobbBrandonGraham_VeganAI_130924.py  CobbBrandonGraham_admin_cog_121124.py  CobbBrandonGraham_ai_cog_111124.py  CobbBrandonGraham_ai_cog_121124.py  CobbBrandonGraham_alt_setup_050924.py  CobbBrandonGraham_alt_setup_310824.py  CobbBrandonGraham_chem_cog_121124.py  CobbBrandonGraham_chem_helpers_261124.py  CobbBrandonGraham_chem_main_261124.py  CobbBrandonGraham_chemplus_cog_121124.py  CobbBrandonGraham_helpers_121124.py  CobbBrandonGraham_info_cog_111124.py  CobbBrandonGraham_plantbased_cog_121124.py  CobbBrandonGraham_py_120824.py  CobbBrandonGraham_py_130924.py  CobbBrandonGraham_py_150924.py  CobbBrandonGraham_py_260724.py  CobbBrandonGraham_py_260824.py  CobbBrandonGraham_script_cog_121124.py  CobbBrandonGraham_setup_020924.py  CobbBrandonGraham_setup_260824.py  CobbBrandonGraham_super_120824.py  CobbBrandonGraham_user_cog_121124.py  LICENSE.fdb_latexmk  LICENSE.fls  Listener.py  Lucy.py  Main.py  README.md  Super.py  advanced_startup.py  bot.py  command.sh  (+13 more)
VeganAI/: CobbBrandonGraham_main_101224.py
bot/: CobbBrandonGraham__init__090824.py  CobbBrandonGraham_main_030824.py  CobbBrandonGraham_main_060824.py  CobbBrandonGraham_main_090824.py  CobbBrandonGraham_main_120824.py  CobbBrandonGraham_main_180824.py  (+11 more)
bots/lucy/api/: pyproject.toml
(+198 files in other folders)
