[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Brandon Graham Cobb <brandongrahamcobb@icloud.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
